test/fail/interpolation/interp_comment.lily
#[
SyntaxError: Comment within interpolated section.
    from interp_comment.lily:6:
]#

var v = $"^(#)"
